<resources>
    <string name="app_name">FoodKart</string>
    <string name="mobile_number">Mobile Number (10 Digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="Name">Name</string>
    <string name="email">Email Address</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="next">Next</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="pref_file_name">preference file</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="place_order_total">Place Order(Total: Rs. 160)</string>
    <string name="choose_food_from_menu_listed_below">Choose Food From Menu Listed Below</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="entered_your_registered_mobile_number_and_email_below">Entered your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 Characters)</string>
    <string name="new_password_min_4_characters">New Password (Min 4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="don_t_have_any_favourite_restaurants">Don\'t have any favourite restaurants</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below :</string>
    <string name="name">Name</string>
    <string name="veer_gmail_com">veer@gmail.com</string>
    <string name="address">Address</string>
    <string name="veer_bhadra_singh">Veer Bhadra Singh</string>
    <string name="_91_73232632832">+91-73232632832</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed.</string>
    <string name="ok">OK</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rs">Rs.</string>
    <string name="_300">300</string>
    <string name="person">/person</string>
    <string name="_4_7">4.7</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="_100">100</string>
    <string name="_1">1</string>
    <string name="food_name">Food Name</string>
    <string name="_200">200</string>
    <string name="remove">REMOVE</string>
    <string name="add">ADD</string>
    <string name="_16_05_2020">16/05/2020</string>
</resources>
