<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/fk" />

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_margin="8dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_mobilenumber"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="5dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobileNumber"
        android:layout_margin="8dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>