<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlCart"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txtCartItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:drawableStart="@drawable/ic_no_fav"
            android:drawablePadding="4dp"
            android:text="@string/food_item_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/staticRs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/rs"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCartPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/staticRs"
                android:gravity="center"
                android:text="@string/_100"
                android:textColor="#000000"
                android:textSize="20sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>