<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.ForgotActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogoForgot"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/fk" />

        <TextView
            android:id="@+id/txtStatement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogoForgot"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/entered_your_registered_mobile_number_and_email_below"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtMobileForgot"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/txtStatement"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/edtForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edtMobileForgot"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:background="#ffffff"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/edtForgotEmail"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ProgressBar
            android:id="@+id/progressBarForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>


</RelativeLayout>