<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRestaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgRestaurantImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:background="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp">

            <RelativeLayout
                android:id="@+id/rlOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/txtRestaurantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgIsFav"
                    android:padding="4dp"
                    android:text="@string/restaurant_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/imgIsFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="2dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_action_fav" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlOne"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/staticRs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/rs"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtCostForTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:textSize="15sp"
                        android:text="@string/_300"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/staticperson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/person"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtRestaurantRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="2dp"
                    android:padding="8dp"
                    android:text="@string/_4_7"
                    android:textSize="20sp"
                    android:textColor="#ffc107"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="41dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_rating" />

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>