<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FoodCartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="My Cart" />

    <RelativeLayout
        android:id="@+id/layoutStatic"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/txtPerContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/ordering_from"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txtOrderRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/txtPerContent"
            android:text="@string/restaurant_name"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/viewStatic"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layoutStatic"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="4dp"
        android:background="#f5f5f5"
        android:backgroundTint="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrderDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnPlaceOrder"
        android:layout_below="@id/viewStatic"
        android:layout_marginBottom="10dp"
        android:padding="5dp" />


    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/place_order_total"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>